Fix for [GF#30998] Value Set page pages have banner wrapping issues.
SVN-Revision: 2278

--- a/software/ncitbrowser/web/css/styleSheet.css
+++ b/software/ncitbrowser/web/css/styleSheet.css
@@ -146,7 +146,6 @@ a.hideLink
  float: left;
  width: 382px;
  height: 117px;
- background-image: url(../images/evs_browser_other_term_logo.gif);
  background-repeat: no-repeat;
  text-decoration: none;
  cursor: pointer;
@@ -162,7 +161,7 @@ a.hideLink
  font-size: 30px;
  font-weight: bold;
  color: #2F2F5F;
- white-space: nowrap;
+ white-space: wrap;
 }
 
 .vocabularynamepopupshort
